--- a/iPhone/Glint/trunk/Website/index.html
+++ b/iPhone/Glint/trunk/Website/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print">	
 <!--[if lt IE 8]><link rel="stylesheet" href="css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 <link rel="stylesheet" href="blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection" />
-<link rel="stylesheet" href="blueprint/plugins/sprites/sprite.css" type="text/css" media="screen, projection" />
+<!--<link rel="stylesheet" href="blueprint/plugins/sprites/sprite.css" type="text/css" media="screen, projection" />-->
 <link rel="stylesheet" href="default.css" type="text/css" media="screen, projection" />
 </head>
 <body>
@@ -67,7 +67,7 @@
 
 	</div>
 	<div class="span-24 last">
-		<p class="small centered">Text and images Copyright &copy; 2009 Jakob Borg</p>
+		<p class="small centered alt">Text and images Copyright &copy; 2009 Jakob Borg</p>
 	</div>
 </div>
 </body>
